--- a/nonrtric_f_release/install/a1policymanagementservice/application_configuration.json
+++ b/nonrtric_f_release/install/a1policymanagementservice/application_configuration.json
@@ -1,9 +1,9 @@
 {
-   "config": {   
+   "config": {
       "ric": [
          {
-            "name": "ric1",
-            "baseUrl": "http://192.168.239.141:8085/",
+            "name": "near-ric-simulator",
+            "baseUrl": "http://localhost:8085/",
             "managedElementIds": [
                "kista_1",
                "kista_2"
@@ -11,19 +11,11 @@
          },
          {
             "name": "ric2",
-            "baseUrl": "http://192.168.239.137:32080/a1mediator/",
+            "baseUrl": "http://192.168.122.65:32080/a1mediator/",
             "managedElementIds": [
                "kista_3",
                "kista_4"
             ]
-         #},
-         #{
-         #   "name": "ric3",
-         #   "baseUrl": "http://ric3:8085/",
-         #   "managedElementIds": [
-         #      "kista_5",
-         #      "kista_6"
-         #   ]
          }
       ]
    }
