--- a/nonrtric_f_release/install/dmaap_adapter/application_configuration.json
+++ b/nonrtric_f_release/install/dmaap_adapter/application_configuration.json
@@ -1,14 +1,8 @@
 {
-  "types": [
-     {
-        "id": "DMaaP MR Information",
-        "dmaapTopicUrl": "/events/unauthenticated.dmaapadp.json/dmaapadapterproducer/msgs?timeout=15000&limit=100",
-        "useHttpProxy": false
-     },
-     {
-      "id": "Kafka Information",
-      "kafkaInputTopic": "unauthenticated.dmaapadp_kafka.text",
-      "useHttpProxy": false
-   }
-  ]
+   "types": [
+      {
+         "id": "Performance_Measurement_Streaming",
+         "dmaapTopicUrl": "/events/unauthenticated.VES_O_RAN_SC_HELLO_WORLD_PM_STREAMING_OUTPUT/myG/C1"
+      }
+   ]
 }
