--- a/nonrtric_f_release/install/dmaap_mediator_producer/type_config.json
+++ b/nonrtric_f_release/install/dmaap_mediator_producer/type_config.json
@@ -1,9 +1,8 @@
 {
-   "types":
-     [
-       {
-         "id": "STD_Fault_Messages",
-         "dmaapTopicUrl": "/events/unauthenticated.dmaapmed.json/dmaapmediatorproducer/STD_Fault_Messages?timeout=15000&limit=100"
-       }
-   ]
- }
+  "types": [
+    {
+      "id": "STD_Fault_Messages",
+      "dmaapTopicUrl": "/events/unauthenticated.SEC_FAULT_OUTPUT/myG/C1"
+    }
+  ]
+}
