--- a/nonrtric_f_release/install/.env
+++ b/nonrtric_f_release/install/.env
@@ -1,27 +1,33 @@
 # Near-RT RIC simulator
-SIMULATOR_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/a1-simulator:2.3.1
+## SIMULATOR_container_name="ric1" 
+SIMULATOR_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/a1-simulator:2.3.1 
 SIMULATOR_PORT1=8085
 SIMULATOR_PORT2=8185
 
 # A1 policy management service
+## A1_POLICY_AGENT_container_name="policy-agent-container"  
 A1_POLICY_AGENT_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-plt-a1policymanagementservice:2.4.1
 A1_POLICY_AGENT_PORT1=8081
 A1_POLICY_AGENT_PORT2=8433
 
 # Information coordinator service
+## ICS_container_name="information-coordinator-service" 
 ICS_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-plt-informationcoordinatorservice:1.3.1
 ICS_PORT1=8083
 ICS_PORT2=8434
 
 # Control panel
+## CONTROL_PANEL_container_name="control-panel"
 CONTROL_PANEL_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-controlpanel:2.3.0
 CONTROL_PANEL_PORT=8080
 
 # Non-RT RIC gateway
+## NONRTRIC_GATEWAY_container_name="nonrtric-gateway" 
 NONRTRIC_GATEWAY_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-gateway:1.0.0
 NONRTRIC_GATEWAY_PORT=9090
 
 # # Dmaap adaptor service
+# ## DMAAP_ADAPTER_container_name="dmaap-adaptor-service"  
 # DMAAP_ADAPTER_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-plt-dmaapadapter:1.1.1
 # temp_DMAAP_ADAPTER_PORT1=9086
 # DMAAP_ADAPTER_PORT1=8084
@@ -29,22 +35,16 @@ NONRTRIC_GATEWAY_PORT=9090
 # DMAAP_ADAPTER_PORT2=8435
 
 # # Dmaap mediator producer
+# ## DMAAP_MEDIATOR="dmaapmediatorservice" 
 # DMAAP_MEDIATOR_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-plt-dmaapmediatorproducer:1.1.0
 # temp_DMAAP_MEDIATOR_PORT1=8885
 # DMAAP_MEDIATOR_PORT1=8085
 # temp_DMAAP_MEDIATOR_PORT2=8985
 # DMAAP_MEDIATOR_PORT2=8185
 
-#DMAAP_MEDIATOR_GO
-DMAAP_MEDIATOR_GO_BASE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-dmaap-mediator-producer
-DMAAP_MEDIATOR_GO_TAG=1.0.1
-
-#DMAAP_ADAPTOR_JAVA
-DMAAP_ADAPTOR_JAVA_BASE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-dmaap-adaptor
-DMAAP_ADAPTOR_JAVA_TAG=1.0.1
-
 
 # app catalogue sevice
+## APP_CATALOGUE="rapp-catalogue-service"  
 APP_CATALOGUE_IMAGE=nexus3.o-ran-sc.org:10002/o-ran-sc/nonrtric-plt-rappcatalogue:1.1.0
 APP_CATALOGUE_PORT1=8680
 APP_CATALOGUE_PORT2=8633
