--- a/nonrtric_f_release/install/dmaap_mediator_producer/type_config.json
+++ b/nonrtric_f_release/install/dmaap_mediator_producer/type_config.json
@@ -2,7 +2,12 @@
   "types": [
     {
       "id": "STD_Fault_Messages",
-      "dmaapTopicUrl": "/events/unauthenticated.SEC_FAULT_OUTPUT/myG/C1"
+      "dmaapTopicUrl": "/events/unauthenticated.SEC_FAULT_OUTPUT/myG/C1",
+      "TypeSchema":"hi defination"
+    },
+    {
+      "id": "SMO-DMAAP",
+      "dmaapTopicUrl": "/events/NRTRIC-TIMESYNC/nonrtric/tofu/?timeout=5000&limit=100"
     }
   ]
 }
