--- a/nonrtric_f_release/install/a1policymanagementservice/application_configuration_SDNC.json
+++ b/nonrtric_f_release/install/a1policymanagementservice/application_configuration_SDNC.json
@@ -19,7 +19,7 @@
          },
          {
             "name": "ric2",
-            "baseUrl": "http://{NearRT}32080/a1mediator",
+            "baseUrl": "http://NearRT:32080/a1mediator",
             "managedElementIds": [
                "kista_3",
                "kista_4"
