--- a/nonrtric_f_release/install/dmaap_adapter/application.yaml
+++ b/nonrtric_f_release/install/dmaap_adapter/application.yaml
@@ -22,7 +22,7 @@ logging:
     org.springframework.web.reactive.function.client.ExchangeFunctions: ERROR
     org.oran.dmaapadapter: TRACE
   file:
-    name: /var/log/dmaap-adaptor-service/application.log
+    name: /var/log/dmaap-adapter-service/application.log
 server:
   # Configuration of the HTTP/REST server. The parameters are defined and handeled by the springboot framework.
   # See springboot documentation.
@@ -31,7 +31,7 @@ server:
   ssl:
     key-store-type: JKS
     key-store-password: policy_agent
-    key-store: /opt/app/dmaap-adaptor-service/etc/cert/keystore.jks
+    key-store: /opt/app/dmaap-adapter-service/etc/cert/keystore.jks
     key-password: policy_agent
     key-alias: policy_agent
 app:
@@ -41,16 +41,16 @@ app:
     # Note that the same keystore as for the server is used.
     trust-store-used: false
     trust-store-password: policy_agent
-    trust-store: /opt/app/dmaap-adaptor-service/etc/cert/truststore.jks
+    trust-store: /opt/app/dmaap-adapter-service/etc/cert/truststore.jks
     # Configuration of usage of HTTP Proxy for the southbound accesses.
     # The HTTP proxy (if configured) will only be used for accessing NearRT RIC:s
     http.proxy-host:
     http.proxy-port: 0
-  vardata-directory: /var/dmaap-adaptor-service
-  ics-base-url: https://information-coordinator-service:8434
+  vardata-directory: /var/dmaap-adapter-service
+  ics-base-url: https://192.168.122.35:8434
   # Location of the component configuration file. The file will only be used if the Consul database is not used;
   # configuration from the Consul will override the file.
-  configuration-filepath: /opt/app/dmaap-adaptor-service/data/application_configuration.json
-  dmaap-base-url: http://{ONAP_IP}:3904
+  configuration-filepath: /opt/app/dmaap-adapter-service/data/application_configuration.json
+  dmaap-base-url: http://192.168.122.88:3904
   # The url used to address this component. This is used as a callback url sent to other components.
   dmaap-adapter-base-url: http://dmaap-adaptor-service:8084
