--- a/oran/xapp/5gcraft/111/xapp-templates/ric-app-python-savedata/Dockerfile
+++ b/oran/xapp/5gcraft/111/xapp-templates/ric-app-python-savedata/Dockerfile
@@ -15,7 +15,7 @@
 # ==================================================================================
 # FROM tensorflow/tensorflow
 FROM python:3.8-alpine
-
+# COPY --from=tensorflow/tensorflow
 # copy rmr libraries from builder image in lieu of an Alpine package
 COPY --from=nexus3.o-ran-sc.org:10002/o-ran-sc/bldr-alpine3-rmr:4.0.5 /usr/local/lib64/librmr* /usr/local/lib64/
 # RMR setup
@@ -25,6 +25,7 @@ ENV LD_LIBRARY_PATH /usr/local/lib/:/usr/local/lib64
 ENV RMR_SEED_RT /opt/route/test_route.rt
 
 # sdl needs gcc
+# RUN apt-get update && apt-get install -y gcc libc6-dev bash
 RUN apk update && apk add gcc musl-dev bash
 
 # Install
